# Identity-Theft-Detection-System

./: .gitignore  .pre-commit-config.yaml  0886.py  README.md  modernized_demo.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: default.yaml
demo/: app.py
scripts/: evaluate.py  train.py
src/: __init__.py
src/data/: __init__.py  synthetic_data.py
src/eval/: __init__.py  evaluator.py
src/explainability/: __init__.py  explainer.py
tests/: test_identity_theft_detection.py
